1998-09-21  Tanaka Akira      <akr@jaist.ac.jp>

	* mel.el: Use `broken-p' to check facility.

1998-09-21  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-ccl.el:
	  - Require 'pccl instead of 'emu.
	  - Use `unless-broken' to check facility.

	* mime-def.el (mime-library-version): Bump up to FLAM-DOODLE
	1.9.5.

1998-09-19  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-ccl.el (q-encoding-ccl-encoded-length): Check
	(featurep 'xemacs) instead of running-xemacs.

1998-09-19  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-ccl.el (base64-ccl-insert-encoded-file): Use
	`mel-ccl-base64-lf-rev' instead of `mel-ccl-b-rev'.

	* mel.el (q-encoding-encoded-length ccl): Check
	(featurep 'xemacs) instead of running-xemacs.

1998-09-17  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-ccl.el (mel-ccl-decode-b): Cut bits over 8bit on last
	byte.

1998-09-17  Tanaka Akira      <akr@jaist.ac.jp>

	* mel.el (mel-defgeneric): Remove `stems' argument.
	(mel-stems): Exchange order between `external' and `internal'.
	(mel-defgeneric): Obtain preference dynamicaly.
	(mel-defpreference): New function
	(mel-usemodule): Renamed from `mel-defmodule' and add a argument
	`condition'.
	(mel-defmethod): Add a argument `condition'.

1998-09-17  Tanaka Akira      <akr@jaist.ac.jp>

	* mel.el: Reindented.
	(mel-defgeneric): Add `stems' argument.

1998-09-16  Tanaka Akira      <akr@jaist.ac.jp>

	* FLIM-ELS (flim-modules): Fix `mel-dl' duplication.

	* mel-b.el: Sync up from 1.7 to 1.17.
	(base64-int-ext-encode-region): Moved from mel.el and renamed
	from `base64-internal-external-encode-region'.
	(base64-int-ext-decode-region): Likewise.
	(base64-int-ext-decode-string): Likewise.
	(base64-int-ext-insert-encoded-file): Likewise.
	(base64-int-ext-write-decoded-region): Likewise.

	* mel-ccl.el: Add copyright notice.

	* mel-q.el (quoted-printable-internal-encoding-limit): Moved
	from mel.el.
	quoted-printable-internal-decoding-limit): Ditto.
	(quoted-printable-int-ext-encode-region): Moved from mel.el and