@@ -1,3 +1,9 @@
+1998-09-25  Tanaka Akira      <akr@jaist.ac.jp>
+
+	* ew-compat.el: New file.
+
+	* FLIM-ELS (flim-modules): Add `ew-compat'.
+
 1998-09-21  Tanaka Akira      <akr@jaist.ac.jp>
 
 	* mel.el: Use `broken-p' to check facility.
